<resources>
    <string name="app_name">Recharge</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="language">Language</string>
    <string name="changeLanguage">Change language</string>
    <string name="disable">Disable</string>
    <string name="notification">Notification</string>
    <string name="disableNotification">Disable notification</string>
    <string name="notifications">Notifications</string>
    <string name="guest">Guest</string>
    <string name="enabled">Enabled</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="orangeTn">Orange TN</string>
    <string name="ooredooTn">Ooredoo TN</string>
    <string name="tunisieTelecom">Tunise Telecom</string>
    <string name="send">Send</string>
    <string name="globalError">Error ! please contact the application developer</string>
    <string name="noRechargeReccord">No credit recharge was performed</string>
    <string name="noCameraFound">No camera found</string>
</resources>
