<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CodeInfoActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/cardCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12345678901234"
            android:textSize="27sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/tuniseTelecome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tunisieTelecom"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/ooredooTn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/ooredooTn"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/orangeTn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/orangeTn"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="sendCreditCode"/>
    </LinearLayout>
</LinearLayout>